--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +62,9 @@
     "babel-preset-next": "^1.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
-  }
+  },
+  "homepage": "https://sota0426.github.io/wave-app-ver2"
 }
