--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "three": "^0.169.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "dev": "next dev",
