--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
     ]
   },
   "browserslist": {
