--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
+    "@types/node": "22.7.9",
+    "@types/react": "18.3.12",
     "babel-preset-next": "^1.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
@@ -72,7 +72,7 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "tailwindcss": "^3.4.13",
-    "typescript": "^4.9.5",
+    "typescript": "4.9.5",
     "typescript-eslint": "^8.8.1"
   },
   "homepage": "https://sota0426.github.io/wave-app-ver2"
