--- a/package.json
+++ b/package.json
@@ -3,36 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.10.1",
-    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
-    "@genkit-ai/ai": "^0.5.16",
-    "@genkit-ai/firebase": "^0.5.16",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
-    "css-loader": "^7.1.2",
+    "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "framer-motion": "^11.11.5",
     "katex": "^0.16.11",
     "next": "^14.2.15",
-    "postcss": "^8.4.47",
-    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.0.1",
-    "style-loader": "^4.0.0",
-    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "three": "^0.169.0",
-    "web-vitals": "^2.1.4",
-    "zod": "^3.23.8"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "next dev",
@@ -63,17 +51,10 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "22.7.9",
     "@types/react": "18.3.12",
-    "babel-preset-next": "^1.4.0",
-    "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "eslint-plugin-react": "^7.37.1",
     "gh-pages": "^6.2.0",
-    "globals": "^15.11.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "4.9.5",
-    "typescript-eslint": "^8.8.1"
+    "tailwindcss": "^3.4.13"
   },
   "homepage": "https://sota0426.github.io/wave-app-ver2"
 }
